--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Body */
 body {
-	font-family: source-sans-pro;
+	font-family: "Segoe UI";
 	background-color: #000000;
 	margin-top: 0px;
 	margin-right: 0px;
